# pydandy

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
pydandy/: __init__.py
tests/: conftest.py  test_dir_mode.py  test_file_mode.py  test_mem_mode.py  test_meta.py  test_models.py  test_tables.py
