[tool.poetry]
name = "pydandy"
version = "0.0.0"
description = "A handy-dandy datastore built on top of Pydantic"
authors = ["Will Johns <will@wcj.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/WilliamJohns/pydandy"
repository = "https://github.com/WilliamJohns/pydandy"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
filelock = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
python-semantic-release = "^7.31.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pydandy/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "no-redef"